--- a/views/login/index.html
+++ b/views/login/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="../inicio/index.html">Início</a></li>
+                    <li><a href="../../index.html">Início</a></li>
                     <li><a href="../sobre/index.html">Sobre</a></li>
                     <li><a href="index.html" style="color: #ffde59;">Login</a></li>
                     <li><a href="../cadastro/index.html">Cadastro</a></li>
@@ -37,7 +37,7 @@
                         <br>
                     <input type="password" name="password" placeholder="Palavra-Passe" id="senha" required>
                         <br>
-                    <button type="submit">Entrar</button>
+                    <button type="submit"> <a href="../home/index.html" style="text-decoration: none; color: white;">Entrar</a></button>
                     <p><a href="../cadastro/index.html">Não possui uma conta? Cadastre-se</a></p>
             </form>
             </div>
@@ -45,6 +45,5 @@
         </section>
     </main>
     <footer>&copy; Todos os direitos reservados. Desenvolvido por CobraDev</footer>
-    <script src="../../assets/js/login.js"></script>
 </body>
 </html>
