--- a/views/sobre/index.html
+++ b/views/sobre/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="../inicio/index.html">Início</a></li>
+                    <li><a href="../../index.html">Início</a></li>
                     <li><a href="index.html" style="color: #ffde59;">Sobre</a></li>
                     <li><a href="../login/index.html">Login</a></li>
                     <li><a href="../cadastro/index.html">Cadastro</a></li>
@@ -58,6 +58,5 @@
         <div class="banner"></div>
     </main>
     <footer>&copy; Todos os direitos reservados. Desenvolvido por CobraDev</footer>
-    <script src="../../assets/js/sobre.js"></script>
 </body>
 </html>
