--- a/views/cadastro/index.html
+++ b/views/cadastro/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="../inicio/index.html">Início</a></li>
+                    <li><a href="../../index.html">Início</a></li>
                     <li><a href="../sobre/index.html">Sobre</a></li>
                     <li><a href="../login/index.html">Login</a></li>
                     <li><a href="index.html" style="color: #ffde59;">Cadastro</a></li>
