--- a/views/curiosidades/index.html
+++ b/views/curiosidades/index.html
@@ -24,7 +24,7 @@
                     <li><a href="../sobre/index.html">Sobre</a></li>
                     <li><a href="../perfil/index.html">Perfil</a></li>
                     <li><a href="index.html" style="color: #ffde59;">curiosidades</a></li>
-                    <li><a href="../inicio/index.html" onclick=localStorage.clear()>Logout</a></li>
+                    <li><a href="../../index.html">Logout</a></li>
                 </ul>
             </div>
         </nav>
