--- a/views/home/index.html
+++ b/views/home/index.html
@@ -24,7 +24,7 @@
                     <li><a href="../sobre/index.html">Sobre</a></li>
                     <li><a href="../perfil/index.html">Perfil</a></li>
                     <li><a href="../curiosidades/index.html">Curiosidades</a></li>
-                    <li><a href="../inicio/index.html" onclick="localStorage.clear()">Logout</a></li>
+                    <li><a href="../../index.html">Logout</a></li>
                 </ul>
             </div>
         </nav>
